--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
-    "solid-js": "^1.9.9"
+    "buffer": "^6.0.3",
+    "solid-js": "^1.9.9",
+    "telegram": "^2.26.22",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
